--- a/app/web/static/css/style.css
+++ b/app/web/static/css/style.css
@@ -22,6 +22,8 @@
     --color-primary-accent: #db8200;
 } */
 
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+
 * {
     font-family: 'Roboto Condensed', sans-serif;
 }
@@ -152,7 +154,7 @@ textarea.materialize-textarea:focus:not([readonly])+label {
     background-color: var(--color-primary-accent);
     color: white;
     font-weight: bold;
-    padding: 0px 5px 5px 5px;
+    padding: 0px 8px 5px 8px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 0px -3px 6px 0px rgba(0,0,0,0.15);
@@ -206,6 +208,18 @@ textarea.materialize-textarea:focus:not([readonly])+label {
 
 .card.selected {
     border: 2px solid var(--color-primary);
+}
+
+.card.card-well {
+    background-color: #f5f5f5;
+    box-shadow: initial;
+    border: 1px solid #e0e0e0;
+}
+
+.card.card-alert {
+    background-color: var(--color-primary-light);
+    box-shadow: initial;
+    border: 1px solid var(--color-primary-accent);
 }
 
 .detail-image-container {
@@ -262,6 +276,18 @@ textarea.materialize-textarea:focus:not([readonly])+label {
 .margin-right-0 {
     margin-right: 0px !important; 
 }
+.padding-right-0 {
+    padding-right: 0px !important; 
+}
+.padding-left-0 {
+    padding-left: 0px !important; 
+}
+.padding-top-10 {
+    padding-top: 10px !important; 
+}
+.padding-bottom-10 {
+    padding-bottom: 10px !important; 
+}
 
 .border-top-2 {
     border-top: 1px solid rgba(160,160,160,0.2);
@@ -271,9 +297,18 @@ textarea.materialize-textarea:focus:not([readonly])+label {
     border-right: 1px solid rgba(160,160,160,0.2);
 }
 
+.separator {
+    width: 100%;
+    height: 1px;
+    background-color: #eaeaea;
+}
+
 /* more fancy! */
-.card, .collection, .modal {
+.card, .collection, .modal,.card .image-container {
   border-radius: 8px;
+}
+.card .card-action:last-child {
+    border-radius: 0 0 8px 8px;
 }
 .btn:not(.btn-floating) {
   border-radius: 5px;
