fix backgrounds order

--- a/app/web/views/background.html
+++ b/app/web/views/background.html
@@ -26,7 +26,7 @@
                         <p>Fondos con diseños pesonalizados para tus fotos ❤</p>
                         <p><b>(+$30 al total del pedido)</b></p>
                         <div class="center-align">
-                            <img src="/img/background_sample.jpg" class="sample-image">
+                            <img src="/img/background_sample2.jpg" class="sample-image">
                         </div>
                         <h6>Seleccioná el fondo que mas te guste! <span class="required">*</span></h6>
                         <div class="row">
