--- a/app/web/views/background.html
+++ b/app/web/views/background.html
@@ -34,7 +34,7 @@
                             <div class="col s6 m4 l3">
                                 <div class="selectable-item">
                                     <div class="card <% if(order && order.BackgroundId == background.id ) { %>selected<% } %>">
-                                        <div class="image-container" 
+                                        <div class="image-container background-cover" 
                                             style="background-image: url('<%= background.image %>')"></div>
                                     </div>
                                     <p>
